cmake_minimum_required(VERSION 3.18)

# Fix behavior of CMAKE_CXX_STANDARD when targeting macOS.
if (POLICY CMP0025)
    cmake_policy(SET CMP0025 NEW)
endif ()


set(CMAKE_GENERATOR Ninja)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/_out)

project(threads VERSION 1.0 LANGUAGES CXX)

set(HEADERS
)

set(SOURCES
    main.cpp
)

add_executable(threads ${SOURCES} ${HEADERS})
